-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8374919 | 25.0.3 | Kelvin Nilsen | P3 | Resolved | Fixed | b01 |
https://github.com/openjdk/shenandoah/pull/193/commits/ca96f5232c0107856a811b27b6b33794a60f7083
in our initial implementation of block_start() had a bug that was never found or fixed, and was later hidden by #undef'ing the code which was left in place for a potential future where object_start arrays may not be updated atomically wrt card scans. If the code were ever to be not undef'd out there would be problems. Either that piece of unused forward walk code should be removed entirely, or the code in the commented out section should be fixed.
The bug was identified by Kelvin Nilsen.
Follow up Note:
============
In the course of investigating this issue, it was found that the issue was deeper, and revealed a bug in `block_start` following class unloading. Here's a succinct summary of the issue and its fix by [~kdnilsen]:
"When scanning a range of dirty cards within the GenShen remembered set, we need to find the object that spans the beginning of the left-most dirty card. The existing code is not reliable following class unloading.
The new code uses the marking context when it is available to determine the location of live objects that reside below TAMS within each region. Above TAMS, all objects are presumed live and parsable."
This makes the bug more serious, if rare, bug and likely a P3. Adjusting the priority setting accordingly.
- backported by
-
JDK-8374919 GenShen: block_start() may be incorrect after class unloading
-
- Resolved
-
- causes
-
JDK-8371854 Shenandoah: Simplify WALK_FORWARD_IN_BLOCK_START use
-
- Resolved
-
-
JDK-8372110 GenShen: Fix erroneous assert
-
- Resolved
-
- duplicates
-
JDK-8360542 Shenandoah crash in mark_loop_work StubRoutines::atomic entry points
-
- Closed
-
-
JDK-8361838 Shenandoah crash in markWord::displaced_mark_helper on class unload
-
- Closed
-
- relates to
-
JDK-8355396 Internal Error when running gc/TestAllocHumongousFragment.java#generational - Error: Before Full GC, Reachable; Object start should be within the region
-
- Open
-
-
JDK-8353691 GenShen: gc/TestAllocHumongousFragment.java#generational crash on ppc64le
-
- Open
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/33e74e04
-
Commit(master)
openjdk/jdk25u-dev/a5bb313d
-
Commit(master)
openjdk/jdk/8531fa14
-
Review(master)
openjdk/jdk25u-dev/19
-
Review(master)
openjdk/jdk25u-dev/138
-
Review(master)
openjdk/jdk25u/378
-
Review(master)
openjdk/jdk/27353