8358735: GenShen: block_start() may be incorrect after class unloading

Co-authored-by: Y. Srinivas Ramakrishna <ysr@openjdk.org>
Reviewed-by: wkemper